myteo/test/analyze/type_check/traits/incorrect_type_param_arity_errors.myte
module test

// Error on incorrect trait parameter arity
trait Trait1<T> {
  fun foo(x: T)
}
trait Trait2 { extends Trait1<Int, Int> }

// Error on incorrect function parameter arity
trait Trait3 {
  fun foo<T>(x: T)
}
trait Trait4 {
  extends Trait3
  override fun foo<T, U>(x: T) {}
}

fun main() {}